# gastro-tracking

./: README.md  pyproject.toml
gastro-tracking/: __init__.py  bayesian_regression.py  diet_simulator.py  plotting.py
