[tool.poetry]
name = "gastro-tracking"
version = "0.1.0"
description = ""
authors = ["marlinfiggins <marlinfiggins@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jax = "^0.4.38"
jaxlib = "^0.4.38"
numpyro = "^0.16.1"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
